fix: Incorrect heading levels

--- a/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
@@ -29,11 +29,11 @@ To aid you in this upgrade, Clerk built a CLI called [`@clerk/upgrade`](https://
 
 The minimum version requirements for Node.js, React, and Next.js have been updated. Versions that are no longer supported or are at end-of-life are no longer guaranteed to work correctly with Clerk. Please take a moment to check your dependencies and ensure you are up to date!
 
-#### Updating Node.js
+**Updating Node.js**
 
 You need to have Node.js `18.17.0` or later installed. Last year, Node.js 16 entered EOL (End of life) status so it's time to bump the required version for `@clerk/nextjs`, too. You can check your Node.js version by running `node -v` in your terminal. Learn more about how to [update and install Node.js](https://nodejs.org/en/learn/getting-started/how-to-install-nodejs).
 
-#### Updating React
+**Updating React**
 
 `@clerk/nextjs` now requires you to use React 18 or higher. You can update your project by installing the latest version of `react` and `react-dom`.
 
@@ -53,7 +53,7 @@ You need to have Node.js `18.17.0` or later installed. Last year, Node.js 16 ent
 
 If you are upgrading from React 17 or lower, make sure to [learn about how to upgrade to React 18](https://react.dev/blog/2022/03/08/react-18-upgrade-guide) as well.
 
-#### Updating Next.js
+**Updating Next.js**
 
 `@clerk/nextjs` now requires you to use Next.js `13.0.4` or later. Check out Next's upgrade guides for more guidance if you have not yet upgraded to Next.js 13:
 
@@ -70,8 +70,7 @@ The new version ships with improved design and UX across all of Clerk's [UI comp
 
 The sections below contain more info on each change made to the customization ids and localization keys for reference. Regardless of how thoroughly you have reviewed the following information, we still recommend that you ensure that you have taken some time to manually look through each of your views to ensure that everything looks good still.
 
-
-#### Appearance changes
+### Appearance changes
 
 <Accordion titles={["<code>Settings</code> -&gt; <code>General</code> tab in <code>OrganizationProfile</code>", "Within <code>&lt;UserProfile /&gt;</code>, Account and Security Pages Separated", "Within <code>&lt;UserProfile /&gt;</code>, Multi-Factor Auth is Added via Dropdown", "Within <code>&lt;UserProfile /&gt;</code>, Connected Accounts Added via Dropdown", "<code>userButtonPopoverActionButtonText</code> customization id removed", "<code>userButtonBox</code> is now a child of <code>userButtonTrigger</code>", "<code>organizationSwitcherPopoverActionButtonText</code> customization id removed", "Changes to the <code>card</code> customization id", "Back button customization ids change on alternative 2fa methods page", "<code>button</code> -&gt; <code>organizationListCreateOrganizationActionButton</code> customization id", "<code>socialButtonsBlockButtonArrow</code> customization id removed", "Identity preview avatar customization ids removed", "Changes to default variables"]}>
 <AccordionPanel>
@@ -140,7 +139,7 @@ The default values of some [appearance variables](/docs/components/customization
     - Previously, the default value for `fontSmoothing` was `auto`. This value is now unset. If you want to pass a custom value to it, you can still do so.
 </AccordionPanel></Accordion>
 
-#### Localization changes
+### Localization changes
 
 <Accordion titles={["New localization keys added", "Removed localization keys", "Localization keys changed"]}>
 <AccordionPanel>
@@ -853,7 +852,7 @@ As part of this major version, we have removed a large number of previously depr
 </Callout>
 
 
-#### Deprecation removals
+### Deprecation removals
 
 <Accordion titles={["<code>CLERK_API_KEY</code> replaced by <code>CLERK_SECRET_KEY</code>", "<code>CLERK_FRONTEND_API</code> replaced by <code>CLERK_PUBLISHABLE_KEY</code>", "<code>CLERK_JS_VERSION</code> should be <code>NEXT_PUBLIC_CLERK_JS_VERSION</code>", "<code>apiKey</code> -&gt; <code>secretKey</code> as param to <code>authMiddleware</code>", "<code>frontendApi</code> -&gt; <code>publishableKey</code> as param to <code>authMiddleware</code>", "<code>apiKey</code> -&gt; <code>secretKey</code> as param to <code>createClerkClient</code>", "<code>frontendApi</code> -&gt; <code>publishableKey</code> as param to <code>createClerkClient</code>", "<code>apiKey</code> -&gt; <code>secretKey</code> as param to <code>getAuth</code>", "<code>frontendApi</code> -&gt; <code>publishableKey</code> as prop to <code>ClerkProvider</code>", "<code>@clerk/nextjs/app-beta</code> import removed", "<code>@clerk/nextjs/ssr</code> import removed", "<code>@clerk/nextjs/edge-middleware</code> import removed", "<code>@clerk/nextjs/edge-middlewarefiles</code> import removed", "<code>API_URL</code> constant removed", "<code>API_VERSION</code> constant removed", "<code>CLERK_JS_URL</code> constant removed", "<code>CLERK_JS_VERSION</code> constant removed", "<code>DOMAIN</code> constant removed", "<code>IS_SATELLITE</code> constant removed", "<code>PROXY_URL</code> constant removed", "<code>PUBLISHABLE_KEY</code> constant removed", "<code>SECRET_KEY</code> constant removed", "<code>SIGN_IN_URL</code> constant removed", "<code>SIGN_UP_URL</code> constant removed", "<code>@clerk/nextjs/api</code> import removed", "<code>MultiSessionAppSupport</code> import moved under <code>/internal</code>", "<code>WithSession</code> component removed", "<code>WithClerk</code> component removed", "<code>WithUser</code> component removed", "<code>withClerk</code> function removed", "<code>withSession</code> function removed", "<code>withUser</code> function removed", "<code>NEXT_PUBLIC_CLERK_JS</code> should be <code>NEXT_PUBLIC_CLERK_JS_URL</code>"]}>
 <AccordionPanel>
@@ -1107,7 +1106,7 @@ function withUser(Component, displayName) {
 If you are using `NEXT_PUBLIC_CLERK_JS` as an environment variable, it should be changed to `NEXT_PUBLIC_CLERK_JS_URL` instead. We renamed this variable for consistency across public APIs. Make sure to also check your production host configuration when changing environment variable values.
 </AccordionPanel></Accordion>
 
-#### Other breaking changes
+### Other breaking changes
 
 <Accordion titles={["<code>API_URL</code> value has changed", "<code>isMagicLinkError</code> -&gt; <code>isEmailLinkError</code>", "<code>useMagicLink</code> -&gt; <code>useEmailLink</code>", "<code>MagicLinkErrorCode</code> -&gt; <code>EmailLinkErrorCode</code>", "<code>setSession</code> -&gt; <code>setActive</code>", "Replace <code>signOutCallback</code> prop on <code>SignOutButton</code> with <code>redirectUrl</code>", "<code>Organization.getOrganizationList()</code> return type changed", "<code>Organization.getOrganizationInvitationList()</code> return type changed", "<code>User.getOrganizationMembershipList()</code> return type changed", "<code>Organization.getRoles</code> arguments changed", "<code>Organization.getMemberships</code> arguments changed", "<code>Organization.getDomains</code> arguments changed", "<code>Organization.getInvitations</code> arguments changed", "<code>Organization.getMembershipRequests</code> arguments changed", "<code>User.getOrganizationInvitations</code> arguments changed", "<code>User.getOrganizationSuggestions</code> arguments changed", "<code>User.getOrganizationMemberships</code> arguments changed"]}>
 <AccordionPanel>
