fix: Remove "we" usage

--- a/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
@@ -65,10 +65,10 @@ If you are upgrading from React 17 or lower, make sure to [learn about how to up
 The new version ships with improved design and UX across all of Clerk's [UI components](/docs/components/overview). If you have used the [`appearance` prop](/docs/components/customization/overview) or tokens for a [custom theme](/docs/components/customization/overview#create-a-custom-theme), you will likely need to make some adjustments to ensure your styling is still looking great. If you're using the [localization prop](/docs/components/customization/localization) you will likely need to make adjustments to account for added or removed localization keys.
 
 <Callout type="info" >
-  If you are not customizing the appearance of your components, or using `localization`, you can skip this section. If you are, we recommend using our CLI (`npx @clerk/upgrade`) to scan for changes required as part of the component redesign more quickly.
+  If you are not customizing the appearance of your components, or using `localization`, you can skip this section. Otherwise it's recommended to use the CLI (`npx @clerk/upgrade`) to scan for changes required as part of the component redesign.
 </Callout>
 
-The sections below contain more info on each change made to the customization ids and localization keys for reference. Regardless of how thoroughly you have reviewed the following information, we still recommend that you ensure that you have taken some time to manually look through each of your views to ensure that everything looks good still.
+The sections below contain more info on each change made to the customization IDs and localization keys for reference. Regardless of how thoroughly you have reviewed the following information, you should still take some time to manually look through each of your views to ensure that everything looks allright.
 
 ### Appearance changes
 
@@ -102,17 +102,17 @@ New appearance prop keys were added to aid with customization, if desired:
 The `userButtonPopoverActionButtonText` customization id has been removed, as the text for this button is now directly rendered inside the button rather than an extra wrapping element. The nested ids `userButtonPopoverActionButtonText__signOut` and `userButtonPopoverActionButtonText__manageAccount` have also been removed. Any styling that needs to apply to the text can be applied to its direct parent `cl-userButtonPopoverActionButton`.
 </AccordionPanel>
 <AccordionPanel>
-We have swapped the parent-child relationship of the two elements `userButtonTrigger` and `userButtonBox`. Previously, `userButtonTrigger` was nested inside of `userButtonBox`, and now `userButtonBox` is nested inside of `userButtonTrigger`. This change resolves [some usability issues](https://github.com/clerk/javascript/issues/1625) in `<UserButton />`. If you are applying style customization to either of these elements, your customizations may need to be adjusted.
+The parent-child relationship of the two elements `userButtonTrigger` and `userButtonBox` has been swapped. Previously, `userButtonTrigger` was nested inside of `userButtonBox`, and now `userButtonBox` is nested inside of `userButtonTrigger`. This change resolves [some usability issues](https://github.com/clerk/javascript/issues/1625) in `<UserButton />`. If you are applying style customization to either of these elements, your customizations may need to be adjusted.
 </AccordionPanel>
 <AccordionPanel>
 The `organizationSwitcherPopoverActionButtonText` customization id has been removed, as the text for this button is now directly rendered inside the button rather than an extra wrapping element. The nested ids `organizationSwitcherPopoverActionButtonText__manageOrganization` and `organizationSwitcherPopoverActionButtonText__createOrganization` have also been removed. Any styling that needs to apply to the text can be applied to its direct parent `cl-organizationSwitcherPopoverActionButton`.
 </AccordionPanel>
 <AccordionPanel>
-The `card` customization id in the previous major version was the main and only container element for components Outside the `card` element we introduced a new `cardBox` id that allows more fine-grained style customization.
+The `card` customization ID in the previous major version was the main and only container element for components outside the `card` element. A new `cardBox` ID was introduced that allows more fine-grained style customization.
 
 As a note, if you are changing the background color of `card`, you will also need to also apply the same color on the `footer` id as well. The `footer` now gray by default, and it’s located outside `card`, but inside `cardBox`.
 
-We also added a `footerItem` id for more targeted styling of items inside the `footer`.
+A `footerItem` ID was added for more targeted styling of items inside the `footer`.
 </AccordionPanel>
 <AccordionPanel>
 The "back" button on the panel within `<SignIn />` that lists out alternative two factor auth methods has changed location, and there have been some changes to the ids as a result of this:
@@ -496,7 +496,7 @@ Additionally, there are now new helpers that enable controlling auth on a _per-p
 
 ### Per-route auth config
 
-Sometimes, code speaks louder than words. Let's get right into an example:
+Sometimes, code speaks louder than words. Let's get right into an example. `auth().protect()` is added to a layout and and all of its children will be gated by auth.
 
 <Tabs type="auth-protect-layout-page" items={["Layout", "Page"]}>
 <Tab>
@@ -527,9 +527,7 @@ export default async function DashboardPage() {
 </Tab>
 </Tabs>
 
-In this example, we add `auth().protect()` to a layout, and like magic, that layout and all of it's children will be gated by auth.
-
-Want to get more specific with permission gating? Just add the role you are gating as a param:
+Want to get more specific with permission gating? Add the role you are gating as a parameter:
 
 ```ts filename="app/src/admin/layout.tsx"
 import { auth } from '@clerk/nextjs/server'
@@ -553,11 +551,11 @@ export const config = {
 }
 ```
 
-If you are using the pages router, we recommend middleware auth config as seen below.
+If you are using the pages router, please use the setup explained in the next section.
 
 ### Middleware auth config
 
-If you'd still prefer to define your auth logic within the middleware, we support this fully as well, and have put a lot of work into improving the ergonomics as well. The primary change was to make `clerkMiddleware()` not protect any routes by default, instead requiring the developer to add routes they would like to be protected by auth. This is a substantial contrast to the previous `authMiddleware()`, which protected all routes by default, requiring the developer to add exceptions. We have also made efforts to substantially simplify the API and make it easier to combine with other middleware helpers smoothly.
+If you prefer to define your auth logic within the middleware, you can still do this with the new version of `@clerk/nextjs`. The primary change was to make `clerkMiddleware()` not protect any routes by default, instead requiring the developer to add routes they would like to be protected by auth. This is a substantial contrast to the previous `authMiddleware()`, which protected all routes by default, requiring the developer to add exceptions. The API was substantially simplified and makes it easier to combine `clerkMiddleware()` with other middleware helpers.
 
 Here's an example that replicates the auth protection scheme above, but entirely inside the middleware:
 
@@ -586,12 +584,12 @@ export const config = {
 A couple things to note here:
 
 - The `createRouteMatcher` helper makes it easy to define route groups that you can leverage inside the middleware function and check in whichever order you'd like. Note that it can take an array of routes as well.
-- With `clerkMiddleware`, we are defining the routes we want **to be protected**, rather than the routes we don't want to be protected.
-- We are able to use the same `auth().protect()` helpers that we can use within layouts/pages here in the middleware.
+- With `clerkMiddleware`, you're defining the routes you want **to be protected**, rather than the routes you don't want to be protected.
+- You are able to use the same `auth().protect()` helpers that you can use within layouts/pages here in the middleware.
 
 ### Migrating to `clerkMiddleware()`
 
-We strongly recommend migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your middleware setup this version.
+Clerk strongly recommends migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your middleware setup this version.
 
 The most basic migration will be updating the import and changing out the default export.
 
@@ -738,12 +736,12 @@ Of course, in most cases you'll have a more complicated setup than this. You can
 </Accordion>
 
 
-## Changes to top level exports
+## Changes to top-level exports
 
-As part of this release, we changed some of the top-level exports of `@clerk/nextjs` in order to improve bundle size and tree-shaking efficiency. These changes have resulted in a ~75% reduction in build size for middleware bundles. However, you will likely need to make some changes to import paths as a result.
+As part of this release, Clerk changed some of the top-level exports of `@clerk/nextjs` in order to improve bundle size and tree-shaking efficiency. These changes have resulted in a ~75% reduction in build size for middleware bundles. However, you will likely need to make some changes to import paths as a result.
 
 <Callout type="info" >
-  We recommend using our CLI tool, `npx @clerk/upgrade`, to automatically find occurences of old imports.
+  Use the CLI tool, `npx @clerk/upgrade`, to automatically find occurences of old imports.
 </Callout>
 
 <Accordion titles={["@clerk/nextjs/server", "@clerk/nextjs/errors", "@clerk/nextjs/app-beta", "@clerk/nextjs/ssr", "@clerk/nextjs/edge-middleware", "@clerk/nextjs/edge-middlewarefiles", "@clerk/nextjs/api"]} heading="h4">
@@ -845,10 +843,10 @@ As part of this change, the default URL for each of these props has been set to 
 
 ## Deprecation removals & housekeeping
 
-As part of this major version, we have removed a large number of previously deprecated props, arugments, methods, etc, and made changes to things that are only realistically used internally, or only used very rarely. It's highly unlikely that any given app will encounter any of these items, but they are all breaking changes, so they have all been documented below.
+As part of this major version, a large number of previously deprecated props, arguments, methods, etc. have been removed. It's highly unlikely that any given app will encounter any of these items, as they have been used internally or very rarely.
 
 <Callout type="info" >
-  For this section more than any other one, we recommend using the CLI upgrade tool (`npx @clerk/upgrade`), since there are a lot of changes, each of which are very unlikely to appear in your codebase, that would take a very long time to look for manually.
+  For this section more than any other one, please use the CLI upgrade tool (`npx @clerk/upgrade`). As there are a lot of changes, each of which are very unlikely to appear in your codebase, it would take a long time to look for them manually.
 </Callout>
 
 
@@ -934,37 +932,37 @@ This deprecated import has been replaced by `@clerk/nextjs`. Usage should now lo
 This deprecated import has been replaced by `@clerk/nextjs`. Usage should now look as such: `import { authMiddleware } from @clerk/nextjs`. There may be changes in functionality between the two exports depending on how old the version used is, so upgrade with caution.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `CLERK_API_URL` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `CLERK_API_URL` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `CLERK_API_VERSION` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `CLERK_API_VERSION` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_JS` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_JS` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_JS_VERSION` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_JS_VERSION` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_DOMAIN` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_DOMAIN` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_IS_SATELLITE` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_IS_SATELLITE` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_PROXY_URL` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_PROXY_URL` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `CLERK_SECRET_KEY` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `CLERK_SECRET_KEY` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_SIGN_IN_URL` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_SIGN_IN_URL` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
-This deprecated constant has been removed as an export from `@clerk/nextjs`. We recommend setting the `NEXT_PUBLIC_CLERK_SIGN_UP_URL` environment variable and using this instead.
+This deprecated constant has been removed as an export from `@clerk/nextjs`. Define a `NEXT_PUBLIC_CLERK_SIGN_UP_URL` environment variable and use it as a substitute.
 </AccordionPanel>
 <AccordionPanel>
 The import subpath `@clerk/nextjs/api` has been removed. This includes the following imports:
@@ -1103,7 +1101,7 @@ function withUser(Component, displayName) {
 ```
 </AccordionPanel>
 <AccordionPanel>
-If you are using `NEXT_PUBLIC_CLERK_JS` as an environment variable, it should be changed to `NEXT_PUBLIC_CLERK_JS_URL` instead. We renamed this variable for consistency across public APIs. Make sure to also check your production host configuration when changing environment variable values.
+If you are using `NEXT_PUBLIC_CLERK_JS` as an environment variable, it should be changed to `NEXT_PUBLIC_CLERK_JS_URL` instead. This variable was renamed for consistency across public APIs. Make sure to also check your production host configuration when changing environment variable values.
 </AccordionPanel></Accordion>
 
 ### Other breaking changes
