--- a/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
@@ -488,11 +488,11 @@ const changedValues = {
 ```
 </AccordionPanel></Accordion>
 
-## New middleware architecture
+## New Middleware architecture
 
-User and customer feedback about `authMiddleware()` has been clear in that middleware logic was a often friction point. As such, in v5 you will find a completely new middleware helper called [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) that will hopefully alleviate all of the issues folks had with `authMiddleware()`.
+User and customer feedback about `authMiddleware()` has been clear in that Middleware logic was a often friction point. As such, in v5 you will find a completely new Middleware helper called [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) that will hopefully alleviate all of the issues folks had with `authMiddleware()`.
 
-Additionally, there are now new helpers that enable controlling auth on a _per-page and/or per-layout basis_ when using app router. While you can still configure which routes are protected via middleware, the page-based protection strategy is what is now recommended, as the co-location of auth protection configuration with the code for the pages themselves results in a superior developer experience that adds clarity as you navigate your codebase.
+Additionally, there are now new helpers that enable controlling auth on a _per-page and/or per-layout basis_ when using App Router. While you can still configure which routes are protected via Middleware, the page-based protection strategy is what is now recommended, as the co-location of auth protection configuration with the code for the pages themselves results in a superior developer experience that adds clarity as you navigate your codebase.
 
 ### Per-route auth config
 
@@ -539,7 +539,7 @@ export default async function AdminLayout({ children }) {
 }
 ```
 
-Note that in order for this to work, you will still need middleware to be present, but it only requires the most minimal configuration:
+Note that in order for this to work, you will still need Middleware to be present, but it only requires the most minimal configuration:
 
 ```ts filename="middleware.ts"
 import { clerkMiddleware } from '@clerk/nextjs/server'
@@ -551,13 +551,13 @@ export const config = {
 }
 ```
 
-If you are using the pages router, please use the setup explained in the next section.
+If you are using the Pages Router, please use the setup explained in the next section.
 
 ### Middleware auth config
 
-If you prefer to define your auth logic within the middleware, you can still do this with the new version of `@clerk/nextjs`. The primary change was to make `clerkMiddleware()` not protect any routes by default, instead requiring the developer to add routes they would like to be protected by auth. This is a substantial contrast to the previous `authMiddleware()`, which protected all routes by default, requiring the developer to add exceptions. The API was substantially simplified and makes it easier to combine `clerkMiddleware()` with other middleware helpers.
+If you prefer to define your auth logic within the Middleware, you can still do this with the new version of `@clerk/nextjs`. The primary change was to make `clerkMiddleware()` not protect any routes by default, instead requiring the developer to add routes they would like to be protected by auth. This is a substantial contrast to the previous `authMiddleware()`, which protected all routes by default, requiring the developer to add exceptions. The API was substantially simplified and makes it easier to combine `clerkMiddleware()` with other Middleware helpers.
 
-Here's an example that replicates the auth protection scheme above, but entirely inside the middleware:
+Here's an example that replicates the auth protection scheme above, but entirely inside the Middleware:
 
 ```ts filename="middleware.ts"
 import {
@@ -583,13 +583,13 @@ export const config = {
 
 A couple things to note here:
 
-- The `createRouteMatcher` helper makes it easy to define route groups that you can leverage inside the middleware function and check in whichever order you'd like. Note that it can take an array of routes as well.
+- The `createRouteMatcher` helper makes it easy to define route groups that you can leverage inside the Middleware function and check in whichever order you'd like. Note that it can take an array of routes as well.
 - With `clerkMiddleware`, you're defining the routes you want **to be protected**, rather than the routes you don't want to be protected.
-- You are able to use the same `auth().protect()` helpers that you can use within layouts/pages here in the middleware.
+- You are able to use the same `auth().protect()` helpers that you can use within layouts/pages here in the Middleware.
 
 ### Migrating to `clerkMiddleware()`
 
-Clerk strongly recommends migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your middleware setup this version.
+Clerk strongly recommends migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your Middleware setup this version.
 
 The most basic migration will be updating the import and changing out the default export.
 
@@ -738,7 +738,7 @@ Of course, in most cases you'll have a more complicated setup than this. You can
 
 ## Changes to top-level exports
 
-As part of this release, Clerk changed some of the top-level exports of `@clerk/nextjs` in order to improve bundle size and tree-shaking efficiency. These changes have resulted in a ~75% reduction in build size for middleware bundles. However, you will likely need to make some changes to import paths as a result.
+As part of this release, Clerk changed some of the top-level exports of `@clerk/nextjs` in order to improve bundle size and tree-shaking efficiency. These changes have resulted in a ~75% reduction in build size for Middleware bundles. However, you will likely need to make some changes to import paths as a result.
 
 <Callout type="info" >
   Use the CLI tool, `npx @clerk/upgrade`, to automatically find occurences of old imports.
@@ -781,7 +781,7 @@ As part of this release, Clerk changed some of the top-level exports of `@clerk/
     ```
   </AccordionPanel>
   <AccordionPanel>
-    The `@clerk/nextjs` import will work with both the app and pages router.
+    The `@clerk/nextjs` import will work with both the app and Pages Router.
 
     ```diff
     - import { } from "@clerk/nextjs/app-beta"
@@ -832,7 +832,7 @@ As part of this release, Clerk changed some of the top-level exports of `@clerk/
 
 ## After sign up/in/out URL handling
 
-Defining redirect URLs for after sign up, in, and/or out via the Clerk dashboard has been removed in v5. In your Clerk dashboard, under "paths", there is a section called "Component paths", where URLs could be defined that had a deprecation warning. In v5, this functionality has been removed, and specifying redirect paths via the dashboard will no longer work. If you need to pass a redirect URL for after sign in/up/out, there are [a few different ways this can be done](https://clerk.com/docs/account-portal/custom-redirects), from environment variables to middleware to supplying them directly to the relevant components.
+Defining redirect URLs for after sign up, in, and/or out via the Clerk dashboard has been removed in v5. In your Clerk dashboard, under "paths", there is a section called "Component paths", where URLs could be defined that had a deprecation warning. In v5, this functionality has been removed, and specifying redirect paths via the dashboard will no longer work. If you need to pass a redirect URL for after sign in/up/out, there are [a few different ways this can be done](https://clerk.com/docs/account-portal/custom-redirects), from environment variables to Middleware to supplying them directly to the relevant components.
 
 As part of this change, the default URL for each of these props has been set to `/`, so if you are passing `/` explicitly to any one of the above props, that line is no longer necessary and can be removed.
 
@@ -920,7 +920,7 @@ If you are using the `@clerk/nextjs/app-beta` import anywhere, it should use `@
 
 Make this change carefully as some behavior may have changed between our beta and stable releases. You can refer to [our documentation](https://clerk.com/docs/quickstarts/nextjs) and/or [approuter example](https://github.com/clerk/clerk-nextjs-app-quickstart) for up-to-date usage.
 
-The `@clerk/nextjs` import will work with both app router and pages router.
+The `@clerk/nextjs` import will work with both App Router and Pages Router.
 </AccordionPanel>
 <AccordionPanel>
 If you are importing from `@clerk/nextjs/ssr`, you can use `@clerk/nextjs` instead. Our top-level import supports SSR functionality by default now, so the subpath on the import is no longer needed. This import can be directly replaced without any other considerations.
