--- a/docs/authentication/social-connections/x-twitter.mdx
+++ b/docs/authentication/social-connections/x-twitter.mdx
@@ -45,7 +45,7 @@ In the modal that opened, copy the **Authorized redirect URI**. Keep this modal 
 
 <Images
   width={1512}
-  height={822}
+  height={982}
   src="/docs/images/authentication-providers/x-twitter/redirect-uri.webp"
   alt="The X/Twitter settings modal in the Clerk Dashboard. An arrow marked '1' is pointing to the 'Redirect URI' copy button."
 />
@@ -54,21 +54,27 @@ In the modal that opened, copy the **Authorized redirect URI**. Keep this modal 
 
 Navigate back to the X/Twitter Developer portal. On the application settings screen, scroll down to the **User authentication settings** section and select **Set up**.
 
-{/* TODO (Alexis): Update screenshot with Figma assets */}
-![Setting up User Authentication settings of a Twitter app](/docs/images/authentication-providers/x-twitter/set-up-user-authentication-settings.png)
+<Images
+  width={1512}
+  height={982}
+  src="/docs/images/authentication-providers/x-twitter/set-up-user-authentication-settings.webp"
+  alt="The X/Twitter set up user authentication settings page. An arrow marked '1' is pointing to the 'Set up' button."
+/>
 
 In the next screen, you'll be presented with the **User authentication settings** page. Under **App permissions**, you can choose the permissions you want to request from the user. For this tutorial, we'll be using the **Read** permission. Under **Type of App**, select **Web App, Automated App or Bot**.
 
 Under **App info**, in the **Callback URI / Redirect URL** input, paste the **Authorized Redirect URI** value you copied from the Clerk Dashboard in the last step. Your app's settings should like similar to the ones below. Fill any other required fields, such as the **Website URL**, and select **Save**.
 
-{/* TODO (Alexis): Update screenshot with Figma assets */}
-![Fill in the User Authentication Settings](/docs/images/authentication-providers/x-twitter/fill-user-authentication-settings.png)
+<Images
+  width={1512}
+  height={982}
+  src="/docs/images/authentication-providers/x-twitter/fill-user-authentication-settings.webp"
+  alt="The X/Twitter user authentication settings page. An arrow marked '1' is pointing to the 'type of app' input. An arrow marked '2' is pointing to the 'Callback URI / Redirect URL' input. An arrow marked '3' is pointing to required website URL input."
+/>
 
 ### Set the API key and API secret key in your Clerk Dashboard
 
-After setting up your X/Twitter application, you should be able to copy your **API key** and **API secret key**. 
-
-{/* TODO: Insert screenshot of the page where the API key and API secret key are located. */}
+After setting up your X/Twitter application, you should be able to copy your **API key** and **API secret key**.
 
 Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields.
 
@@ -76,13 +82,12 @@ Go back to the Clerk Dashboard, where the modal should still be open, and paste 
   If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the LinkedIn option. You can now paste the **API key** and **API secret key** into their respective fields.
 </Callout>
 
-<Images
-  width={1512}
-  height={822}
-  src="/docs/images/authentication-providers/x-twitter/paste-credentials.webp"
-  alt="The X/Twitter settings modal in the Clerk Dashboard. There is an arrow marked '1' pointing to the 'API key' and an arrow marked '2' pointing to the 'API secret key' inputs."
-/>
-
+  <Images
+    width={1512}
+    height={982}
+    src="/docs/images/authentication-providers/x-twitter/paste-credentials.webp"
+    alt="The X/Twitter settings modal in the Clerk Dashboard. An arrow marked '1' is pointing to the 'Client ID' input. An arrow marked '2' is pointing to the 'Client Secret' input."
+  />
 ### Finished 🎉
 
 Congratulations! Social connection with LinkedIn is now configured for your Clerk application.
