--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -35,11 +35,19 @@ function Example() {
 
     try {
       const result = await signUp.create({ emailAddress, password});
-      if (result.status == 'complete') {
+      if (result.status === 'complete') {
         await setActive({ session: result.createdSessionId });
-      } else {
-        // handle incomplete sign-up
-        // other possible status are 'abandoned' & 'missing_requirements'
+        return;
+      }
+      if (result.status === 'abandoned') {
+        const error = { code: result.status, message: "The sign-up attempt will be abandoned if it was started more than 24 hours previously." }
+        setErrors([error]);
+        return;
+      }
+      if (result.status === 'missing_requirements') {
+        const error = { code: result.status, message: "A requirement from the email, phone, username settings is missing." }
+        setErrors([error]);
+        return;
       }
     } catch(err: unknown) {
       if (isClerkAPIResponseError(err)) setErrors(err.errors);
@@ -119,11 +127,29 @@ function Example() {
 
     try {
       const result = await signIn.create({ identifier: emailAddress, password});
-      if (result.status == 'complete') {
+      if (result.status === 'complete') {
         await setActive({ session: result.createdSessionId });
-      } else {
-        // handle incomplete sign-in
-        // other possible status are 'needs_identifier', 'needs_first_factor', 'needs_second_factor' & 'needs_new_password'
+        return;
+      }
+      if (result.status === 'needs_identifier')  {
+        const error = { code: result.status, message: "The authentication identifier hasn't been provided." }
+        setErrors([error]);
+        return;
+      }
+      if (result.status === 'needs_first_factor')  {
+        const error = { code: result.status, message: "First factor verification for the provided identifier needs to be prepared and verified." }
+        setErrors([error]);
+        return;
+      }
+      if (result.status === 'needs_second_factor')  {
+        const error = { code: result.status, message: "Second factor verification (2FA) for the provided identifier needs to be prepared and verified." }
+        setErrors([error]);
+        return;
+      }
+      if (result.status === 'needs_new_password')  {
+        const error = { code: result.status, message: "New password hasn't been provided." }
+        setErrors([error]);
+        return;
       }
     } catch(err: unknown) {
       if (isClerkAPIResponseError(err)) setErrors(err.errors);
