final editorial pass

--- a/docs/authentication/social-connections/x-twitter.mdx
+++ b/docs/authentication/social-connections/x-twitter.mdx
@@ -18,12 +18,12 @@ description: Learn how to set up a social connection with X/Twitter v2 in your C
 - Create an X/Twitter application
 - Enable X/Twitter as a social connection
 - Set Clerk's **Authorized Redirect URI** in your X/Twitter application
-- Set X/Twitter's **API key** and **API secret key** in your Clerk Dashboard
+- Set X/Twitter's **Client ID** and **Client Secret** in your Clerk Dashboard
 </TutorialHero>
 
 ## Overview
 
-Clerk does not currently support preconfigured shared OAuth credentials for X/Twitter on development instances. This means you will have to provide custom credentials for both development *and* production instances, which includes generating your own **API key** and **API secret key** using your X/Twitter Developer account. Don't worry, this tutorial will walk you through that process in just a few simple steps.
+Clerk does not currently support preconfigured shared OAuth credentials for X/Twitter on development instances. This means you will have to provide custom credentials for both development *and* production instances, which includes generating your own **Client ID** and **Client Secret** using your X/Twitter Developer account. Don't worry, this tutorial will walk you through that process in just a few simple steps.
 
 <Callout type="warning">
   X/Twitter v2 is currently not providing email addresses of users. The user will have to fill in their email address manually when they return to your application after authenticating with X/Twitter.
@@ -33,9 +33,9 @@ Clerk does not currently support preconfigured shared OAuth credentials for X/Tw
 
 ### Create an X/Twitter application
 
-If you don't have an existing X/Twitter application you've set up for social connection, you need to register a new one at the [Twitter Developer Portal](https://developer.twitter.com/en/portal/dashboard). Note that the process requires approval from Twitter before your new application can be used.
+If you don't have an existing X/Twitter application you've set up for social connection, you need to register a new one at the [X/Twitter Developer Portal](https://developer.twitter.com/en/portal/dashboard). Note that the process requires approval from X/Twitter before your new application can be used.
 
-To create a new X/Twitter application, navigate to the Twitter Developer Portal and go to [**Projects & Apps**](https://developer.twitter.com/en/portal/projects-and-apps). Select **+ Add App**. After entering a name, you will be presented with your app's credentials. However, for setting up the X/Twitter v2 social connection with Clerk, **you won't need these credentials**. This is because you will be utilizing the OAuth 2.0 flow, which relies on different authentication details.
+To create a new X/Twitter application, navigate to the X/Twitter Developer Portal and go to [**Projects & Apps**](https://developer.twitter.com/en/portal/projects-and-apps). Select **+ Add App**. After entering a name, you will be presented with your app's credentials. However, for setting up the X/Twitter v2 social connection with Clerk, **you won't need these credentials**. This is because you will be utilizing the OAuth 2.0 flow, which relies on different authentication details.
 
 ### Enable X/Twitter as a social connection
 
@@ -72,14 +72,14 @@ Under **App info**, in the **Callback URI / Redirect URL** input, paste the **Au
   alt="The X/Twitter user authentication settings page. An arrow marked '1' is pointing to the 'type of app' input. An arrow marked '2' is pointing to the 'Callback URI / Redirect URL' input. An arrow marked '3' is pointing to required website URL input."
 />
 
-### Set the API key and API secret key in your Clerk Dashboard
+### Set the Client ID and Client Secret in your Clerk Dashboard
 
-After setting up your X/Twitter application, you should be able to copy your **API key** and **API secret key**.
+After setting up your X/Twitter application, you should be able to copy your **Client ID** and **Client Secret**.
 
 Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields.
 
 <Callout type="info">
-  If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the LinkedIn option. You can now paste the **API key** and **API secret key** into their respective fields.
+  If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the X/Twitter option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
 </Callout>
 
   <Images
@@ -90,6 +90,6 @@ Go back to the Clerk Dashboard, where the modal should still be open, and paste 
   />
 ### Finished 🎉
 
-Congratulations! Social connection with LinkedIn is now configured for your Clerk application.
+Congratulations! Social connection with X/Twitter is now configured for your Clerk application.
 
 </Steps>
