--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -14,7 +14,7 @@ Clerk uses a mechanism called "the client handshake" to resolve a request’s au
 
 With the handshake, we can resolve authentication state on the backend and ensure the request is properly handled as signed in or out, instead of being in a potentially “unknown” state. The handshake flow relies on redirects to exchange session information between FAPI and the application, ensuring the resolution of unknown authentication states minimizes performance impact and behaves consistently across different framework and language implementations.
 
-The resolution is fast and shouldn't be noticeable to the end user.
+The resolution is blazing fast and usually happens at the Edge.
 
 ## Handshake flow
 
