add section that explains __client_uat cookie

--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -71,6 +71,10 @@ The `__session` cookie is set on the host application that is secured by Clerk (
 
 However, if a `__session` cookie is expired on a request to an application’s backend, the SDK doesn’t know if the session has ended, or if a new short-lived JWT needs to be issued. When an SDK gets into this state, it triggers Clerk's client handshake.
 
+#### The `__client_uat` cookie
+
+The `__client_uat` cookie is set on the host application that is secured by Clerk and hints Clerk SDKs about the timestamp of the latest authentication update of the current client.
+
 ### The client handshake
 
 Clerk uses a client handshake mechanism to resolve a request’s authentication state from unknown (`handshake`) to `signed-in` or `signed-out`. 
@@ -85,8 +89,8 @@ Every Frontend API request returns a response payload that contains two top leve
 
 ```json
 {
-   "client": ...,
-   "response": ...
+  "client": ...,
+  "response": ...
 }
 ```
 
@@ -106,10 +110,10 @@ These platforms treat cookies differently than web browsers. As a result, ClerkJ
 
 It's not recommended to use Client piggybacking because of the following issues:
 
-1. It’s a very large chunk of a tree-like state and doesn’t change often.
-1. It’s hard to compute on the backend as it requires a lot of data from the database. The computation takes place on every request, adding a significant overhead.
-1. It’s best effort.
-1. It’s not a two-way communication channel.
+1. It's a very large chunk of a tree-like state and doesn't change often.
+1. It's hard to compute on the backend as it requires a lot of data from the database. The computation takes place on every request, adding a significant overhead.
+1. It's best effort.
+1. It's not a two-way communication channel.
 
 ## Clerk Backend API (BAPI)
 
