update return types to { data, totalCount } for listing API requests

--- a/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
+++ b/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
@@ -8,7 +8,7 @@ description: Retrieves the list of allowlist identifiers.
 Retrieves the list of allowlist identifiers.
 
 ```tsx
-function getAllowlistIdentifier: () => Promise<AllowlistIdentifier[]>;
+function getAllowlistIdentifier: () => Promise<PaginatedResourceResponse<AllowlistIdentifier[]>>;
 ```
 
 ## `getAllowlistIdentifierList()` example
@@ -17,15 +17,18 @@ function getAllowlistIdentifier: () => Promise<AllowlistIdentifier[]>;
 const response = await clerkClient.allowlistIdentifiers.getAllowlistIdentifierList();
 
 console.log(response);
-/* In this example, you can see that the array of AllowlistIdentifier objects is populated with only one AllowlistIdentifier.
-[
-  _AllowlistIdentifier {
-    id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
-    identifier: 'test@example.com',
-    createdAt: 1705443883820,
-    updatedAt: 1705443883820,
-    invitationId: undefined
-  }
-]
+/* In this example, you can see that data is an array of AllowlistIdentifier objects, and is populated with only one AllowlistIdentifier.
+{
+  data: [
+    _AllowlistIdentifier {
+      id: 'alid_2b3VjS02AsRMoTcyLzMJ7mZvz4J',
+      identifier: 'test@example.com',
+      createdAt: 1705443883820,
+      updatedAt: 1705443883820,
+      invitationId: undefined
+    }
+  ],
+  totalCount: 1
+}
 */
 ```
